--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#DataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bharattipireaddy
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.view.prefix=/WEB-INF/jsps/
+spring.mvc.view.suffix=.jsp
+
+server.context-path==/flightreservation
