--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,27 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bharattipireaddy
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
+#JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+#MVC
 spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
+
+#MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=shradhachandans@gmail.com
+spring.mail.password=7205146854
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+
+#LOGGER
+logging.file.name= D:/SPRING BOOT AND MICROSERVISES/TOOLS/LOG4J/MyLogs/reservation.log
+logging.file.max-size=10MB
+logging.level.com.shradha.flightreservation=info
+logging.pattern.file=== %d ---- %p ---- %C ---- %M ----- %m ----- %l %n
+
 
