--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,9 @@ logging.file.max-size=10MB
 logging.level.com.shradha.flightreservation=info
 logging.pattern.file=== %d ---- %p ---- %C ---- %M ----- %m ----- %l %n
 
+#EXTERNALIZE
+com.shradha.flightreservation.itinerary.dirpath= D:/BHARATH THIPPIREDDY/Reservations/reservation
+com.shradha.flightreservation.email.subject = Itinerary for your Flight
+com.shradha.flightreservation.email.body = Please Find Your Itinerary attached
+
 
